refactor: 쿼리 최적화 진행 중